# packdiff

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  UI-CONCEPTS.md  demo.sh  package-lock.json  package.json  playwright.config.mjs  test.sh
.githooks/: pre-push
.github/: version-gate.py
.github/workflows/: cargo-crates-publish.yml  ci.yml  version-gate.yml
.skills/: README.md
.skills/packdiff-pr/: SKILL.md  map-discussion.mjs
cli/: Cargo.toml  build.rs
cli/assets/: page.css  page.js
cli/examples/: pack.rs
cli/src/: git.rs  lib.rs  main.rs  progress.rs  render.rs
cli/tests/: cli.rs
docs/: ARCHITECTURE.md  CLI.md  DATA-MODEL.md  PAGE.md  WASM-ABI.md  architecture.md  cli.md  data-model.md  page.md  publishing.md  wasm-abi.md
dto/: Cargo.toml
dto/src/: diff.rs  export.rs  highlight.rs  lib.rs  markdown.rs  review.rs  snapshot.rs
tests/: discussion_map.test.mjs  wasm_abi.test.mjs
tests/browser/: ui.spec.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs
