[workspace]
resolver = "2"
members = ["dto", "wasm", "cli"]

[workspace.package]
version = "0.4.5"
edition = "2021"
# Minimum supported Rust: `u64::div_ceil` (1.73) is the newest API used;
# verified by building the whole workspace with this exact toolchain.
rust-version = "1.74"
authors = ["Dmitry \"Dima\" Korolev <dmitry.korolev@gmail.com>"]
license = "MIT"
repository = "https://github.com/dkorolev/packdiff"
readme = "README.md"
keywords = ["git", "diff", "code-review", "html", "wasm"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
# The internal library, pinned once here so its version lives in a single
# place. `path` is used inside the workspace; `version` is what a published
# crate depends on (cargo strips the path when publishing). Bump this in
# lockstep with `workspace.package.version` above (or let `cargo release` do
# both) — see PUBLISHING.md.
packdiff-dto = { path = "dto", version = "0.4.5" }

# Size-tuned release profile: the wasm module ships base64-inlined in every
# generated HTML page, so every byte counts.
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
