[package]
name = "packdiff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pack a git diff into one self-contained HTML review page — with local, exportable review comments."

[dependencies]
packdiff-dto = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
