[package]
name = "packdiff-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM ABI over packdiff-dto: packdiff's in-page comment engine. No wasm-bindgen — plain C ABI over UTF-8 JSON buffers."

[lib]
# cdylib is the shipped artifact; rlib lets the packaged `packdiff` crate's
# build script link this crate into its wasm shim (see cli/build.rs).
crate-type = ["cdylib", "rlib"]

[dependencies]
packdiff-dto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
